install/0000_90_machine-api-operator_05_networkpolicy-allow-egress.yaml
# Allow egress from apps in openshift-machine-api to kube api
# Allow egress from apps in openshift-machine-api to DNS
# Allow egress from apps in openshift-machine-api to external cloud platforms
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: openshift-machine-api
  annotations:
    capability.openshift.io/name: MachineAPI
    exclude.release.openshift.io/internal-openshift-hosted: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
spec:
  egress:
  - ports:
    - protocol: TCP
      port: 1
      endPort: 65535
  - ports:
    - protocol: UDP
      port: 5353 
  podSelector:
    matchExpressions:
    - key: k8s-app
      operator: In
      values:
      - cluster-autoscaler
      - cluster-autoscaler-operator
      - cluster-baremetal-operator
      - control-plane-machine-set-operator
      - controller
      - machine-api-operator
  policyTypes:
  - Egress
